# arba-rsce

./: .clang-format  CMake-package-config.cmake.in  CMakeLists.txt  README.md  cmake_quick_install.cmake  conanfile.py
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  basic_resource_manager_example.cpp  resource_manager_example.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/arba/rsce/: basic_resource_manager.hpp  load_resource_from_binary_stream.hpp  load_resource_from_file.hpp  load_resource_from_text_stream.hpp  resource_manager.hpp  resource_store.hpp
include/rsce/: basic_resource_manager.hpp  load_resource_from_file.hpp  resource_manager.hpp  resource_store.hpp
src/: resource_store.cpp  rsce.cpp
test/: CMakeLists.txt  basic_resource_manager_mngr_tests.cpp  basic_resource_manager_tests.cpp  basic_resource_manager_tests_2.cpp  basic_resource_manager_tests_mngr.cpp  project_version_tests.cpp  resource_manager_mngr_tests.cpp  resource_manager_tests.cpp  resource_manager_tests_2.cpp  resource_manager_tests_mngr.cpp  resource_store_tests.cpp  rsce_tests.cpp
test/plugin_tests/: CMakeLists.txt  plugin_as_resource_tests.cpp
test/plugin_tests/rng/: CMakeLists.txt  rng.cpp  rng.hpp
test/plugin_tests/rng_interface/: CMakeLists.txt
test/plugin_tests/rng_interface/include/: rng_interface.hpp
test/resources/: resources_helper.hpp  story.hpp  story_mngr.hpp  stream_binary_rsc.hpp  stream_binary_rsc_mngr.hpp  stream_text_rsc.hpp  stream_text_rsc_mngr.hpp  text.hpp  text_mngr.hpp
test/rsc/ut/text/: invalid.txt  koro.txt  tiki.txt
test_package/: CMakeLists.txt  test_package.cpp
